<resources>
    <string name="app_name">FarmAid</string>
    <string name="title_activity_naavi">Naavi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="profit_gain">Profit</string>
    <string name="rm">RM</string>
    <string name="m">m</string>
    <string name="hello">UnitConverter</string>
    <string name="unit1">Temperature</string>
    <string name="unit2">Weight</string>
    <string name="unit3">Length</string>
    <string name="unit4">Power</string>
    <string name="unit5">Energy</string>
    <string name="unit6">Velocity</string>
    <string name="unit7">Area</string>
    <string name="unit8">Volume</string>
    <string name="unit9">Currency</string>
    <string name="weightunitkg">Kg</string>
    <string name="weightunitgm">gm</string>
    <string name="weightunitlb">lb</string>
    <string name="weightunitounce">ounce</string>
    <string name="weightunitmg">mg</string>
    <string name="temperatureunitc">Celsius</string>
    <string name="temperatureunitf">Fahrenheit</string>
    <string name="lengthunitcm">cm</string>
    <string name="lengthunitm">m</string>
    <string name="lengthunitmm">mm</string>
    <string name="lengthunitkm">km</string>
    <string name="lengthunitfeet">ft</string>
    <string name="lengthunitmile">mile</string>
    <string name="lengthunitinch">inch</string>
    <string name="powerunithorseposer">horsepower</string>
    <string name="powerunitwatts">watts</string>
    <string name="powerunitkilowatts">kilowatts</string>
    <string name="energyunitcalories">calories</string>
    <string name="energyunitjoules">joules</string>
    <string name="energyunitkilocalories">kilocalories</string>
    <string name="velocityunitkmph">Km/hr</string>
    <string name="velocityunitmeterpers">m/s</string>
    <string name="velocityunitmilesperh">miles/hr</string>
    <string name="velocityunitfeetpers">feet/s</string>
    <string name="areaunitsqmm">square mm</string>
    <string name="areaunitsqm">square m</string>
    <string name="areaunitsqcm">square cm</string>
    <string name="areaunitsqkm">square km</string>
    <string name="areaunitsqmiles">square miles</string>
    <string name="areaunitsqyard">square yards</string>
    <string name="volumeunitmillilitres">millilitre</string>
    <string name="volumeunitlitres">litre</string>
    <string name="volumeunitcubicmm">cubic mm</string>
    <string name="volumeunitcubiccm">cubic cm</string>
    <string name="volumeunitcubicm">cubic m</string>
    <string name="volumeunitcubicfeet">cubic feet</string>
    <string name="currencyunitusd">US Dollars</string>
    <string name="currencyunitinr">Indian Rupees</string>
    <string name="KID">Unit Converter</string>
</resources>
